package com.example.backend.repository;
import com.example.backend.model.Etudiant;
import org.springframework.data.jpa.repository.JpaRepository;
import java.util.Optional;
public interface EtudiantRepository extends JpaRepository<Etudiant,Long>{Optional<Etudiant> findByEmail(String email);}